styles/style.css
body {
  margin: 0;
  background-image: url("../data/mountains.gif");
  background-size: 30%;
}

.wrapper {
  position: relative;
  text-align: center;
}

.wrapper::before {
  content: '';
  display: inline-block;
  height: 100vh;
  vertical-align: middle;

}

.main {
  background-color: rgba(255, 255, 255, 0.6);
  border-radius: 20px;
  color: black;
  width: 60%;
  display: inline-block;
  vertical-align: middle;
  font-family: 'Josefin Sans', sans-serif;
  text-align: center;
}

.main--content {
  width: 80%;
  display: inline-block;
  text-align: center;
  padding: 1em;
}

header.global {
  margin-bottom: 1em;
  width: 80%;
  display: inline-block;
}

header.subpage {
  font-size: 1em;
  margin-bottom: 1em;
  display: inline-block;
}

header.subpage a:hover {
  background-color: transparent;
}

.name {
  font-size: 3em;
  font-size: 5vw;
}

.link-bar {
  border-left: none;
  border-right: none;
  font-size: 1em;
}

ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

li {
  background-color: white;
}

li a {
  display: block;
}

li:hover {
    background-color: black;
    color: white;
}

a {
  text-decoration: none;
  color: inherit;
}

a.selected {
  background-color: black;
  color: white;
}

a.selected:hover {
  background-color: white;
  color: black;
}

.link-bar li {
  display: inline-block;
  text-align: center;
  width: 25%;
  position: relative;
}

.link-bar li:first-child {
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
}

.link-bar li:last-child {
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
}

.link-bar--text {
  position: absolute;
  left: 50%;
  transform: translate(-50%, 50%);
  visibility: hidden;
}

li a:hover .link-bar--text {
  visibility: visible;
}

.front-nav {
  display: table;
  font-size: 1.5em;
}

.front-nav li {
  margin-bottom: 1em;
  border-radius: 10px;
  padding: 0.15em 0.3em;
  text-align: left;
}


nav {
    width: 100%;
    background-color: white;
}


nav li {
  display: inline-block;
  text-align: center;
  width: 25%;
  position: relative;
}


h1 {
  font-size: 2em;
}

.paragraph {
  margin: 1em 0;
  background-color: white;
  border-radius: 20px;
  padding: 1em;
}

#description {
  padding-top: 5em;
  padding-left: 1em;
  padding-right: 1em;
  padding-bottom: 2em;
  text-align: center;
}

